sass/web.site/modules/video/_video-stage-heading.sass
.video-stage-heading
	color: #eee
	display: block
	font-size: remify(18px)
	font-weight: bold
	letter-spacing: $zon-letter-spacing-m
	line-height: 1.125
	margin: 0 auto
	padding: remify($small--px)
	width: 100% // for IE8, to display the logo correctly
	+font-smoothing()
	+respond-min($break-phablet-min)
		font-size: remify(24px)
	+respond-min($break-desktop-min)
		padding: 0
		position: absolute
		left: $page-padding
		top: remify($small--px)

	&__logo
		height: remify(20px)
		vertical-align: sub
		width: remify(136px)
		+respond-min($break-phablet-min)
			width: remify(197px)
			height: remify(27px)

